// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pull content should pull correctly with type filter 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "./dummy/test-topic.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type testTopic}
 * - {@displayField heading}
 * - {@description Topic model, a heading, an abstract and a call to action}
 */
export interface ContentfulTestTopic {
  /** @modelberry
   * - {@name Abstract}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@validations size-min0-max155 size-min1000-max200}
   */
  abstract?: string
  /** @modelberry
   * - {@name Actions}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-testAction linkContentType-someOtherAction}
   * - {@widgetId entryLinksEditor}
   */
  actions?: string
  /** @modelberry
   * - {@name Heading}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  heading?: string
  /** @modelberry
   * - {@name Icon}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  icon?: string
  /** @modelberry
   * - {@name Media}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Asset}
   * - {@widgetId assetLinksEditor}
   */
  media?: string
  /** @modelberry
   * - {@name Poster}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   */
  poster?: string
}
",
    ],
    Array [
      "./dummy/test-action.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type testAction}
 * - {@displayField heading}
 */
export interface ContentfulTestAction {
  /** @modelberry
   * - {@name Anchor}
   * - {@type Symbol}
   * - {@helpText Voorbeeld: mijn-anchor}
   */
  anchor?: string
  /** @modelberry
   * - {@name Description}
   * - {@type Symbol}
   * - {@helpText Omschrijving van de actie, voor zoekmachines}
   */
  description?: string
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   */
  eventId?: string
  /** @modelberry
   * - {@name Heading}
   * - {@type Symbol}
   */
  heading?: string
  /** @modelberry
   * - {@name Query}
   * - {@type Symbol}
   */
  query?: string
  /** @modelberry
   * - {@name Url}
   * - {@type Symbol}
   */
  url?: string
}
",
    ],
    Array [
      "./dummy/navigation-section.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type navigationSection}
 * - {@displayField title}
 * - {@description navigationSection}
 */
export interface ContentfulNavigationSection {
  /** @modelberry
   * - {@name Title}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  title?: string
  /** @modelberry
   * - {@name Logo}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   */
  logo?: string
  /** @modelberry
   * - {@name Logo action}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-action}
   */
  logoAction?: string
  /** @modelberry
   * - {@name Header}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  header?: string
  /** @modelberry
   * - {@name Footer}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  footer?: string
  /** @modelberry
   * - {@name Social}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-navigationSegment}
   */
  social?: string
  /** @modelberry
   * - {@name Actions}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-navigationSegment}
   */
  actions?: string
  /** @modelberry
   * - {@name Legal}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-navigationSegment}
   */
  legal?: string
  /** @modelberry
   * - {@name Information}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  information?: string
  /** @modelberry
   * - {@name Sitemap}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  sitemap?: string
}
",
    ],
    Array [
      "./dummy/topic-section.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type topicSection}
 * - {@displayField title}
 * - {@description Topic section}
 */
export interface ContentfulTopicSection {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Sectie weergave}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Hoe de sectie wordt weergegeven}
   * - {@validations in-block-card-divider}
   */
  variant?: string
  /** @modelberry
   * - {@name Sectie onderwerpen}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-topic}
   * - {@widgetId entryLinksEditor}
   * - {@helpText Eén of meerder onderwerpen die worden weergegeven in de sectie}
   */
  topics?: string
  /** @modelberry
   * - {@name Hide icon}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideIcon?: string
  /** @modelberry
   * - {@name Hide media}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideMedia?: string
  /** @modelberry
   * - {@name Hide heading}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideHeading?: string
  /** @modelberry
   * - {@name Hide abstract}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideAbstract?: string
  /** @modelberry
   * - {@name Hide action}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideAction?: string
  /** @modelberry
   * - {@name Reversed order}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  reversedOrder?: string
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   * - {@widgetId slugEditor}
   * - {@helpText Voorbeeld: mijn-event-id}
   * - {@validations unique-true}
   */
  eventId?: string
  /** @modelberry
   * - {@name Sectie thema}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Kies het thema voor deze sectie}
   * - {@validations in-glacierLight-glacierDark}
   */
  theme?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/topic.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type topic}
 * - {@displayField title}
 * - {@description Topic}
 */
export interface ContentfulTopic {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Onderwerp titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Titel van het onderwerp, zonder punt aan eind}
   */
  heading?: string
  /** @modelberry
   * - {@name Onderwerp tekst}
   * - {@type Text}
   * - {@widgetId multipleLine}
   * - {@helpText Korte omschrijving van het onderwerp, sluit af met een punt}
   */
  abstract?: string
  /** @modelberry
   * - {@name Onderwerp afbeelding}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Asset}
   * - {@widgetId assetGalleryEditor}
   * - {@helpText Afbeelding bij het onderwerp}
   * - {@validations size-min1-max4}
   */
  media?: string
  /** @modelberry
   * - {@name Onderwerp icoon}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Icoon bij het onderwerp}
   * - {@validations in-activity-airplay-alert-circle}
   */
  icon?: string
  /** @modelberry
   * - {@name Onderwerp acties}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-action}
   * - {@widgetId entryLinksEditor}
   * - {@helpText Eén of meerdere acties bij het onderwerp. Een actie heeft een eigen naam en kan ook linken naar een extern bron.}
   */
  actions?: string
  /** @modelberry
   * - {@name Poster}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   * - {@validations linkMimetypeGroup-image}
   */
  poster?: string
  /** @modelberry
   * - {@name Media embed}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@helpText Voeg Youtube/Vimeo embed code toe. Note: Media embed ondersteund alleen Embed-type: html}
   * - {@validations linkContentType-embed}
   */
  mediaEmbed?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/text-section.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type textSection}
 * - {@displayField title}
 * - {@description Text section}
 */
export interface ContentfulTextSection {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Variant}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@validations in-text}
   */
  variant?: string
  /** @modelberry
   * - {@name Tekst}
   * - {@required true}
   * - {@type RichText}
   * - {@widgetId richTextEditor}
   * - {@helpText Eenvoudig opgemaakte tekstveld met kopjes en afbeeldingen}
   * - {@validations enabledMarks-bold-italic-underline unknown}
   */
  text: string
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   * - {@widgetId slugEditor}
   * - {@helpText Voorbeeld: mijn-event-id}
   * - {@validations unique-true}
   */
  eventId?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/navigation-segment.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type navigationSegment}
 * - {@displayField title}
 * - {@description Navigation segment}
 */
export interface ContentfulNavigationSegment {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Navigatiesegment titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText De naam van dit navigatiesegment. Alleen nodig bij meerdere segmenten.}
   */
  heading?: string
  /** @modelberry
   * - {@name Segment tekst}
   * - {@type Text}
   * - {@widgetId multipleLine}
   * - {@helpText Tekst voor dit menu segment}
   */
  abstract?: string
  /** @modelberry
   * - {@name Acties voor dit segment}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-action}
   * - {@widgetId entryLinksEditor}
   * - {@helpText De pagina's in dit navigatie segment.}
   */
  actions?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/page.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type page}
 * - {@displayField title}
 * - {@description Page}
 */
export interface ContentfulPage {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Pagina URL}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Laatste deel van de URL naar deze pagina. Bijvoorbeeld: www.mijnsite.nl/stel-dit-deel-hier-in}
   * - {@validations regexp-1 unique-true}
   */
  path: string
  /** @modelberry
   * - {@name Paginasecties}
   * - {@required true}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSection-tableSection-textSection}
   * - {@widgetId entryLinksEditor}
   * - {@helpText Kies de secties die met elkaar deze pagina vormen}
   */
  sections: string
  /** @modelberry
   * - {@name Paginathema}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Kies het thema voor deze pagina}
   * - {@validations in-glacierLight-glacierDark}
   */
  theme?: string
  /** @modelberry
   * - {@name SEO titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Titel van de pagina, gebruikt door zoek machines zoals Google}
   */
  seoTitle?: string
  /** @modelberry
   * - {@name SEO omschrijving}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Omschrijving van de pagina, gebruikt door zoek machines zoals Google}
   * - {@validations size-min0-max155}
   */
  seoDescription?: string
  /** @modelberry
   * - {@name SEO afbeelding}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   * - {@helpText Afbeelding bij de pagina, wordt meegegeven aan een link en weergegeven door social media}
   * - {@validations linkMimetypeGroup-image}
   */
  seoImage?: string
  /** @modelberry
   * - {@name Seo keywords}
   * - {@type Array}
   * - {@itemsType Symbol}
   * - {@widgetId tagEditor}
   */
  seoKeywords?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/globals.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type globals}
 * - {@displayField title}
 * - {@description Globals}
 */
export interface ContentfulGlobals {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Site auteur}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Beschiknaar in alle secties}
   */
  siteAuthor?: string
  /** @modelberry
   * - {@name Site omschrijving}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Omschrijving van de site, gebruikt door zoek machines zoals Google}
   */
  siteDescription?: string
  /** @modelberry
   * - {@name Site titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Titel van de site, gebruikt door zoek machines zoals Google}
   */
  siteHeading?: string
  /** @modelberry
   * - {@name Site sleutelwoorden}
   * - {@type Array}
   * - {@itemsType Symbol}
   * - {@widgetId tagEditor}
   * - {@helpText Sleutelwoorden voor de site, gebruikt door zoek machines zoals Google}
   */
  siteKeywords?: string
  /** @modelberry
   * - {@name Site image}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   * - {@validations linkMimetypeGroup-image}
   */
  siteImage?: string
  /** @modelberry
   * - {@name Site embeds}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-embed}
   * - {@widgetId entryLinksEditor}
   */
  siteEmbeds?: string
  /** @modelberry
   * - {@name Direct naar content}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Tekst voor schermlezers om direct door te gaan naar de content.}
   */
  skipToContentHeading?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/embed.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type embed}
 * - {@displayField title}
 * - {@description Embed}
 */
export interface ContentfulEmbed {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Code}
   * - {@type Text}
   * - {@widgetId multipleLine}
   */
  code?: string
  /** @modelberry
   * - {@name Type}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@validations in-html-js-action-js-app}
   */
  type?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/action.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type action}
 * - {@displayField title}
 * - {@description Action}
 */
export interface ContentfulAction {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Actie naam}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Naam van de actie, zonder punt aan eind}
   */
  heading?: string
  /** @modelberry
   * - {@name Actie omschrijving}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Omschrijving van de actie, voor zoekmachines}
   */
  description?: string
  /** @modelberry
   * - {@name Icon}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@validations in-activity-airplay-alert-circle-21}
   */
  icon?: string
  /** @modelberry
   * - {@name Actie paginalink}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@helpText De pagina waar de actie naar linkt (of gebruik de URL)}
   * - {@validations linkContentType-page}
   */
  page?: string
  /** @modelberry
   * - {@name Actie URL}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText De URL waar de actie naar linkt (of gebruik de paginalink)}
   * - {@validations regexp-2}
   */
  url?: string
  /** @modelberry
   * - {@name Anchor}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Voorbeeld: mijn-anchor}
   */
  anchor?: string
  /** @modelberry
   * - {@name Query}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Voorbeeld: &x=1&y=2}
   */
  query?: string
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   * - {@widgetId slugEditor}
   * - {@helpText Voorbeeld: mijn-event-id}
   * - {@validations unique-true}
   */
  eventId?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/validations.ts",
      "export const modelberryPluginData: ModelberryPluginData = {
  'size-min0-max155': { size: { max: 155, min: 0 } },
  'size-min1000-max200': { size: { max: 200, min: 1000 } },
  'linkContentType-testAction': { linkContentType: ['testAction'] },
  'linkContentType-someOtherAction': { linkContentType: ['someOtherAction'] },
  'linkContentType-action': { linkContentType: ['action'] },
  'linkContentType-navigationSegment': {
    linkContentType: ['navigationSegment'],
  },
  'in-block-card-divider': {
    in: [
      'block',
      'card',
      'divider',
      'featured',
      'gallery',
      'headline',
      'hero',
      'image',
      'quote',
      'showcase',
      'video',
    ],
  },
  'linkContentType-topic': { linkContentType: ['topic'] },
  'unique-true': { unique: true },
  'in-glacierLight-glacierDark': { in: ['glacierLight', 'glacierDark'] },
  'size-min1-max4': { size: { min: 1, max: 4 } },
  'in-activity-airplay-alert-circle': {
    in: [
      'activity',
      'airplay',
      'alert-circle',
      'alert-octagon',
      'alert-triangle',
      'align-center',
      'align-justify',
      'align-left',
      'align-right',
      'anchor',
      'aperture',
      'archive',
      'arrow-down-circle',
      'arrow-down-left',
      'arrow-down-right',
      'arrow-down',
      'arrow-left-circle',
      'arrow-left',
      'arrow-right-circle',
      'arrow-right',
      'arrow-up-circle',
      'arrow-up-left',
      'arrow-up-right',
      'arrow-up',
      'at-sign',
      'award',
      'bar-chart-2',
      'bar-chart',
      'battery-charging',
      'battery',
      'bell-off',
      'bell',
      'bluetooth',
      'bold',
      'book-open',
      'book',
      'bookmark',
      'box',
      'briefcase',
      'calendar',
      'camera-off',
      'camera',
      'cast',
      'check-circle',
      'check-square',
      'check',
      'chevron-down',
      'chevron-left',
      'chevron-right',
      'chevron-up',
      'chevrons-down',
      'chevrons-left',
      'chevrons-right',
      'chevrons-up',
      'chrome',
      'circle',
      'clipboard',
      'clock',
      'cloud-drizzle',
      'cloud-lightning',
      'cloud-off',
      'cloud-rain',
      'cloud-snow',
      'cloud',
      'code',
      'codepen',
      'codesandbox',
      'coffee',
      'columns',
      'command',
      'compass',
      'copy',
      'corner-down-left',
      'corner-down-right',
      'corner-left-down',
      'corner-left-up',
      'corner-right-down',
      'corner-right-up',
      'corner-up-left',
      'corner-up-right',
      'cpu',
      'credit-card',
      'crop',
      'crosshair',
      'database',
      'delete',
      'disc',
      'dollar-sign',
      'download-cloud',
      'download',
      'droplet',
      'edit-2',
      'edit-3',
      'edit',
      'external-link',
      'eye-off',
      'eye',
      'facebook',
      'fast-forward',
      'feather',
      'figma',
      'file-minus',
      'file-plus',
      'file-text',
      'file',
      'film',
      'filter',
      'flag',
      'folder-minus',
      'folder-plus',
      'folder',
      'framer',
      'frown',
      'gift',
      'git-branch',
      'git-commit',
      'git-merge',
      'git-pull-request',
      'github',
      'gitlab',
      'globe',
      'grid',
      'hard-drive',
      'hash',
      'headphones',
      'heart',
      'help-circle',
      'hexagon',
      'home',
      'image',
      'inbox',
      'info',
      'instagram',
      'italic',
      'key',
      'layers',
      'layout',
      'life-buoy',
      'link-2',
      'link',
      'linkedin',
      'list',
      'loader',
      'lock',
      'log-in',
      'log-out',
      'mail',
      'map-pin',
      'map',
      'maximize-2',
      'maximize',
      'meh',
      'menu',
      'message-circle',
      'message-square',
      'mic-off',
      'mic',
      'minimize-2',
      'minimize',
      'minus-circle',
      'minus-square',
      'minus',
      'monitor',
      'moon',
      'more-horizontal',
      'more-vertical',
      'mouse-pointer',
      'move',
      'music',
      'navigation-2',
      'navigation',
      'octagon',
      'package',
      'paperclip',
      'pause-circle',
      'pause',
      'pen-tool',
      'percent',
      'phone-call',
      'phone-forwarded',
      'phone-incoming',
      'phone-missed',
      'phone-off',
      'phone-outgoing',
      'phone',
      'pie-chart',
      'play-circle',
      'play',
      'plus-circle',
      'plus-square',
      'plus',
      'pocket',
      'power',
      'printer',
      'radio',
      'refresh-ccw',
      'refresh-cw',
      'repeat',
      'rewind',
      'rotate-ccw',
      'rotate-cw',
      'rss',
      'save',
      'scissors',
      'search',
      'send',
      'server',
      'settings',
      'share-2',
      'share',
      'shield-off',
      'shield',
      'shopping-bag',
      'shopping-cart',
      'shuffle',
      'sidebar',
      'skip-back',
      'skip-forward',
      'slack',
      'slash',
      'sliders',
      'smartphone',
      'smile',
      'speaker',
      'square',
      'star',
      'stop-circle',
      'sun',
      'sunrise',
      'sunset',
      'tablet',
      'tag',
      'target',
      'terminal',
      'thermometer',
      'thumbs-down',
      'thumbs-up',
      'toggle-left',
      'toggle-right',
      'tool',
      'trash-2',
      'trash',
      'trello',
      'trending-down',
      'trending-up',
      'triangle',
      'truck',
      'tv',
      'twitch',
      'twitter',
      'type',
      'umbrella',
      'underline',
      'unlock',
      'upload-cloud',
      'upload',
      'user-check',
      'user-minus',
      'user-plus',
      'user-x',
      'user',
      'users',
      'video-off',
      'video',
      'voicemail',
      'volume-1',
      'volume-2',
      'volume-x',
      'volume',
      'watch',
      'wifi-off',
      'wifi',
      'wind',
      'x-circle',
      'x-octagon',
      'x-square',
      'x',
      'youtube',
      'zap-off',
      'zap',
      'zoom-in',
      'zoom-out',
    ],
  },
  'linkMimetypeGroup-image': { linkMimetypeGroup: ['image'] },
  'linkContentType-embed': { linkContentType: ['embed'] },
  'in-text': { in: ['text'] },
  'enabledMarks-bold-italic-underline': {
    enabledMarks: ['bold', 'italic', 'underline', 'code'],
    message: 'Only bold, italic, underline, and code marks are allowed',
  },
  unknown: {
    nodes: {
      'embedded-entry-block': [{ linkContentType: ['embed', 'topicSection'] }],
      'embedded-entry-inline': [
        { linkContentType: ['embed', 'topicSection'], message: null },
      ],
    },
  },
  'regexp-1': {
    message: 'Please use a valid path: /this/is/a/valid/path/with/:slug',
    regexp: { pattern: '^\\\\\\\\/[a-z0-9:\\\\\\\\._/~%\\\\\\\\-\\\\\\\\+&\\\\\\\\#\\\\\\\\?!=\\\\\\\\(\\\\\\\\)@]*$' },
  },
  'linkContentType-navigationSection-tableSection-textSection': {
    linkContentType: [
      'navigationSection',
      'tableSection',
      'textSection',
      'topicSection',
    ],
  },
  'in-html-js-action-js-app': {
    in: [
      'html',
      'js-action',
      'js-app',
      'js-page-section',
      'js-page',
      'youtube',
    ],
  },
  'in-activity-airplay-alert-circle-21': {
    in: [
      'activity',
      'airplay',
      'alert-circle',
      'alert-octagon',
      'alert-triangle',
      'align-center',
      'align-justify',
      'align-left',
      'align-right',
      'anchor',
      'aperture',
      'archive',
      'arrow-down-circle',
      'arrow-down-left',
      'arrow-down-right',
      'arrow-down',
      'arrow-left-circle',
      'arrow-left',
      'arrow-right-circle',
      'arrow-right',
      'arrow-up-circle',
      'arrow-up-left',
      'arrow-up-right',
      'arrow-up',
      'at-sign',
      'award',
      'bar-chart-2',
      'bar-chart',
      'battery-charging',
      'battery',
      'bell-off',
      'bell',
      'bluetooth',
      'bold',
      'book-open',
      'book',
      'bookmark',
      'box',
      'briefcase',
      'calendar',
      'camera-off',
      'camera',
      'cast',
      'check-circle',
      'check-square',
      'check',
      'chevron-down',
      'chevron-left',
      'chevron-right',
      'chevron-up',
      'chevrons-down',
      'chevrons-left',
      'chevrons-right',
      'chevrons-up',
      'chrome',
      'circle',
      'clipboard',
      'clock',
      'cloud-drizzle',
      'cloud-lightning',
      'cloud-off',
      'cloud-rain',
      'cloud-snow',
      'cloud',
      'code',
      'codepen',
      'codesandbox',
      'coffee',
      'columns',
      'command',
      'compass',
      'copy',
      'corner-down-left',
      'corner-down-right',
      'corner-left-down',
      'corner-left-up',
      'corner-right-down',
      'corner-right-up',
      'corner-up-left',
      'corner-up-right',
      'cpu',
      'credit-card',
      'crop',
      'crosshair',
      'database',
      'delete',
      'disc',
      'dollar-sign',
      'download-cloud',
      'download',
      'droplet',
      'edit-2',
      'edit-3',
      'edit',
      'external-link',
      'eye-off',
      'eye',
      'facebook',
      'fast-forward',
      'feather',
      'figma',
      'file-minus',
      'file-plus',
      'file-text',
      'file',
      'film',
      'filter',
      'flag',
      'folder-minus',
      'folder-plus',
      'folder',
      'framer',
      'frown',
      'gift',
      'git-branch',
      'git-commit',
      'git-merge',
      'git-pull-request',
      'gitlab',
      'globe',
      'grid',
      'hard-drive',
      'hash',
      'headphones',
      'heart',
      'help-circle',
      'hexagon',
      'home',
      'image',
      'inbox',
      'info',
      'instagram',
      'italic',
      'key',
      'layers',
      'layout',
      'life-buoy',
      'link-2',
      'link',
      'linkedin',
      'list',
      'loader',
      'lock',
      'log-in',
      'log-out',
      'mail',
      'map-pin',
      'map',
      'maximize-2',
      'maximize',
      'meh',
      'menu',
      'message-circle',
      'message-square',
      'mic-off',
      'mic',
      'minimize-2',
      'minimize',
      'minus-circle',
      'minus-square',
      'minus',
      'monitor',
      'moon',
      'more-horizontal',
      'more-vertical',
      'mouse-pointer',
      'move',
      'music',
      'navigation-2',
      'navigation',
      'octagon',
      'package',
      'paperclip',
      'pause-circle',
      'pause',
      'pen-tool',
      'percent',
      'phone-call',
      'phone-forwarded',
      'phone-incoming',
      'phone-missed',
      'phone-off',
      'phone-outgoing',
      'phone',
      'pie-chart',
      'play-circle',
      'play',
      'plus-circle',
      'plus-square',
      'plus',
      'pocket',
      'power',
      'printer',
      'radio',
      'refresh-ccw',
      'refresh-cw',
      'repeat',
      'rewind',
      'rotate-ccw',
      'rotate-cw',
      'rss',
      'save',
      'scissors',
      'search',
      'send',
      'server',
      'settings',
      'share-2',
      'share',
      'shield-off',
      'shield',
      'shopping-bag',
      'shopping-cart',
      'shuffle',
      'sidebar',
      'skip-back',
      'skip-forward',
      'slack',
      'slash',
      'sliders',
      'smartphone',
      'smile',
      'speaker',
      'square',
      'star',
      'stop-circle',
      'sun',
      'sunrise',
      'sunset',
      'tablet',
      'tag',
      'target',
      'terminal',
      'thermometer',
      'thumbs-down',
      'thumbs-up',
      'toggle-left',
      'toggle-right',
      'tool',
      'trash-2',
      'trash',
      'trello',
      'trending-down',
      'trending-up',
      'triangle',
      'truck',
      'tv',
      'twitch',
      'twitter',
      'type',
      'umbrella',
      'underline',
      'unlock',
      'upload-cloud',
      'upload',
      'user-check',
      'user-minus',
      'user-plus',
      'user-x',
      'user',
      'users',
      'video-off',
      'video',
      'voicemail',
      'volume-1',
      'volume-2',
      'volume-x',
      'volume',
      'watch',
      'wifi-off',
      'wifi',
      'wind',
      'x-circle',
      'x-octagon',
      'x-square',
      'x',
      'youtube',
      'zap-off',
      'zap',
      'zoom-in',
      'zoom-out',
      'Github',
    ],
  },
  'linkContentType-page': { linkContentType: ['page'] },
  'regexp-2': {
    message: 'Please use a valid url: https://this/is/a/valid/url',
    regexp: {
      pattern:
        '^(ftp|http|https):\\\\\\\\/\\\\\\\\/(\\\\\\\\w+:{0,1}\\\\\\\\w*@)?(\\\\\\\\S+)(:[0-9]+)?(\\\\\\\\/|\\\\\\\\/([\\\\\\\\w#!:.?+=&%@!\\\\\\\\-/]))?$',
    },
  },
}
",
    ],
    Array [
      "./dummy/test-topic.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type testTopic}
 * - {@displayField heading}
 * - {@description Topic model, a heading, an abstract and a call to action}
 */
export interface ContentfulTestTopic {
  /** @modelberry
   * - {@name Abstract}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@validations size-min0-max155 size-min100-max200}
   */
  abstract?: string
  /** @modelberry
   * - {@name Actions}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-testAction linkContentType-someOtherAction}
   * - {@widgetId entryLinksEditor}
   */
  actions?: string
  /** @modelberry
   * - {@name Heading}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  heading?: string
  /** @modelberry
   * - {@name Icon}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  icon?: string
  /** @modelberry
   * - {@name Media}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Asset}
   * - {@widgetId assetLinksEditor}
   */
  media?: string
  /** @modelberry
   * - {@name Poster}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   */
  poster?: string
}
",
    ],
    Array [
      "./dummy/validations.ts",
      "export const modelberryPluginData: ModelberryPluginData = {
  'size-min0-max155': { size: { max: 155, min: 0 } },
  'size-min100-max200': { size: { max: 200, min: 100 } },
  'linkContentType-testAction': { linkContentType: ['testAction'] },
  'linkContentType-someOtherAction': { linkContentType: ['someOtherAction'] },
}
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Pull content should pull correctly without type filter 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "./dummy/test-topic.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type testTopic}
 * - {@displayField heading}
 * - {@description Topic model, a heading, an abstract and a call to action}
 */
export interface ContentfulTestTopic {
  /** @modelberry
   * - {@name Abstract}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@validations size-min0-max155 size-min1000-max200}
   */
  abstract?: string
  /** @modelberry
   * - {@name Actions}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-testAction linkContentType-someOtherAction}
   * - {@widgetId entryLinksEditor}
   */
  actions?: string
  /** @modelberry
   * - {@name Heading}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  heading?: string
  /** @modelberry
   * - {@name Icon}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  icon?: string
  /** @modelberry
   * - {@name Media}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Asset}
   * - {@widgetId assetLinksEditor}
   */
  media?: string
  /** @modelberry
   * - {@name Poster}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   */
  poster?: string
}
",
    ],
    Array [
      "./dummy/test-action.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type testAction}
 * - {@displayField heading}
 */
export interface ContentfulTestAction {
  /** @modelberry
   * - {@name Anchor}
   * - {@type Symbol}
   * - {@helpText Voorbeeld: mijn-anchor}
   */
  anchor?: string
  /** @modelberry
   * - {@name Description}
   * - {@type Symbol}
   * - {@helpText Omschrijving van de actie, voor zoekmachines}
   */
  description?: string
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   */
  eventId?: string
  /** @modelberry
   * - {@name Heading}
   * - {@type Symbol}
   */
  heading?: string
  /** @modelberry
   * - {@name Query}
   * - {@type Symbol}
   */
  query?: string
  /** @modelberry
   * - {@name Url}
   * - {@type Symbol}
   */
  url?: string
}
",
    ],
    Array [
      "./dummy/navigation-section.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type navigationSection}
 * - {@displayField title}
 * - {@description navigationSection}
 */
export interface ContentfulNavigationSection {
  /** @modelberry
   * - {@name Title}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  title?: string
  /** @modelberry
   * - {@name Logo}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   */
  logo?: string
  /** @modelberry
   * - {@name Logo action}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-action}
   */
  logoAction?: string
  /** @modelberry
   * - {@name Header}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  header?: string
  /** @modelberry
   * - {@name Footer}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  footer?: string
  /** @modelberry
   * - {@name Social}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-navigationSegment}
   */
  social?: string
  /** @modelberry
   * - {@name Actions}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-navigationSegment}
   */
  actions?: string
  /** @modelberry
   * - {@name Legal}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@validations linkContentType-navigationSegment}
   */
  legal?: string
  /** @modelberry
   * - {@name Information}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  information?: string
  /** @modelberry
   * - {@name Sitemap}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSegment}
   * - {@widgetId entryLinksEditor}
   */
  sitemap?: string
}
",
    ],
    Array [
      "./dummy/topic-section.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type topicSection}
 * - {@displayField title}
 * - {@description Topic section}
 */
export interface ContentfulTopicSection {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Sectie weergave}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Hoe de sectie wordt weergegeven}
   * - {@validations in-block-card-divider}
   */
  variant?: string
  /** @modelberry
   * - {@name Sectie onderwerpen}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-topic}
   * - {@widgetId entryLinksEditor}
   * - {@helpText Eén of meerder onderwerpen die worden weergegeven in de sectie}
   */
  topics?: string
  /** @modelberry
   * - {@name Hide icon}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideIcon?: string
  /** @modelberry
   * - {@name Hide media}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideMedia?: string
  /** @modelberry
   * - {@name Hide heading}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideHeading?: string
  /** @modelberry
   * - {@name Hide abstract}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideAbstract?: string
  /** @modelberry
   * - {@name Hide action}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  hideAction?: string
  /** @modelberry
   * - {@name Reversed order}
   * - {@type Boolean}
   * - {@widgetId boolean}
   */
  reversedOrder?: string
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   * - {@widgetId slugEditor}
   * - {@helpText Voorbeeld: mijn-event-id}
   * - {@validations unique-true}
   */
  eventId?: string
  /** @modelberry
   * - {@name Sectie thema}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Kies het thema voor deze sectie}
   * - {@validations in-glacierLight-glacierDark}
   */
  theme?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/topic.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type topic}
 * - {@displayField title}
 * - {@description Topic}
 */
export interface ContentfulTopic {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Onderwerp titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Titel van het onderwerp, zonder punt aan eind}
   */
  heading?: string
  /** @modelberry
   * - {@name Onderwerp tekst}
   * - {@type Text}
   * - {@widgetId multipleLine}
   * - {@helpText Korte omschrijving van het onderwerp, sluit af met een punt}
   */
  abstract?: string
  /** @modelberry
   * - {@name Onderwerp afbeelding}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Asset}
   * - {@widgetId assetGalleryEditor}
   * - {@helpText Afbeelding bij het onderwerp}
   * - {@validations size-min1-max4}
   */
  media?: string
  /** @modelberry
   * - {@name Onderwerp icoon}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Icoon bij het onderwerp}
   * - {@validations in-activity-airplay-alert-circle}
   */
  icon?: string
  /** @modelberry
   * - {@name Onderwerp acties}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-action}
   * - {@widgetId entryLinksEditor}
   * - {@helpText Eén of meerdere acties bij het onderwerp. Een actie heeft een eigen naam en kan ook linken naar een extern bron.}
   */
  actions?: string
  /** @modelberry
   * - {@name Poster}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   * - {@validations linkMimetypeGroup-image}
   */
  poster?: string
  /** @modelberry
   * - {@name Media embed}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@helpText Voeg Youtube/Vimeo embed code toe. Note: Media embed ondersteund alleen Embed-type: html}
   * - {@validations linkContentType-embed}
   */
  mediaEmbed?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/text-section.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type textSection}
 * - {@displayField title}
 * - {@description Text section}
 */
export interface ContentfulTextSection {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Variant}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@validations in-text}
   */
  variant?: string
  /** @modelberry
   * - {@name Tekst}
   * - {@required true}
   * - {@type RichText}
   * - {@widgetId richTextEditor}
   * - {@helpText Eenvoudig opgemaakte tekstveld met kopjes en afbeeldingen}
   * - {@validations enabledMarks-bold-italic-underline unknown}
   */
  text: string
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   * - {@widgetId slugEditor}
   * - {@helpText Voorbeeld: mijn-event-id}
   * - {@validations unique-true}
   */
  eventId?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/navigation-segment.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type navigationSegment}
 * - {@displayField title}
 * - {@description Navigation segment}
 */
export interface ContentfulNavigationSegment {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Navigatiesegment titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText De naam van dit navigatiesegment. Alleen nodig bij meerdere segmenten.}
   */
  heading?: string
  /** @modelberry
   * - {@name Segment tekst}
   * - {@type Text}
   * - {@widgetId multipleLine}
   * - {@helpText Tekst voor dit menu segment}
   */
  abstract?: string
  /** @modelberry
   * - {@name Acties voor dit segment}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-action}
   * - {@widgetId entryLinksEditor}
   * - {@helpText De pagina's in dit navigatie segment.}
   */
  actions?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/page.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type page}
 * - {@displayField title}
 * - {@description Page}
 */
export interface ContentfulPage {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Pagina URL}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Laatste deel van de URL naar deze pagina. Bijvoorbeeld: www.mijnsite.nl/stel-dit-deel-hier-in}
   * - {@validations regexp-1 unique-true}
   */
  path: string
  /** @modelberry
   * - {@name Paginasecties}
   * - {@required true}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-navigationSection-tableSection-textSection}
   * - {@widgetId entryLinksEditor}
   * - {@helpText Kies de secties die met elkaar deze pagina vormen}
   */
  sections: string
  /** @modelberry
   * - {@name Paginathema}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@helpText Kies het thema voor deze pagina}
   * - {@validations in-glacierLight-glacierDark}
   */
  theme?: string
  /** @modelberry
   * - {@name SEO titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Titel van de pagina, gebruikt door zoek machines zoals Google}
   */
  seoTitle?: string
  /** @modelberry
   * - {@name SEO omschrijving}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Omschrijving van de pagina, gebruikt door zoek machines zoals Google}
   * - {@validations size-min0-max155}
   */
  seoDescription?: string
  /** @modelberry
   * - {@name SEO afbeelding}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   * - {@helpText Afbeelding bij de pagina, wordt meegegeven aan een link en weergegeven door social media}
   * - {@validations linkMimetypeGroup-image}
   */
  seoImage?: string
  /** @modelberry
   * - {@name Seo keywords}
   * - {@type Array}
   * - {@itemsType Symbol}
   * - {@widgetId tagEditor}
   */
  seoKeywords?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/globals.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type globals}
 * - {@displayField title}
 * - {@description Globals}
 */
export interface ContentfulGlobals {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Site auteur}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Beschiknaar in alle secties}
   */
  siteAuthor?: string
  /** @modelberry
   * - {@name Site omschrijving}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Omschrijving van de site, gebruikt door zoek machines zoals Google}
   */
  siteDescription?: string
  /** @modelberry
   * - {@name Site titel}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Titel van de site, gebruikt door zoek machines zoals Google}
   */
  siteHeading?: string
  /** @modelberry
   * - {@name Site sleutelwoorden}
   * - {@type Array}
   * - {@itemsType Symbol}
   * - {@widgetId tagEditor}
   * - {@helpText Sleutelwoorden voor de site, gebruikt door zoek machines zoals Google}
   */
  siteKeywords?: string
  /** @modelberry
   * - {@name Site image}
   * - {@type Link}
   * - {@linkType Asset}
   * - {@widgetId assetLinkEditor}
   * - {@validations linkMimetypeGroup-image}
   */
  siteImage?: string
  /** @modelberry
   * - {@name Site embeds}
   * - {@type Array}
   * - {@itemsType Link}
   * - {@itemsLinkType Entry}
   * - {@itemsValidations linkContentType-embed}
   * - {@widgetId entryLinksEditor}
   */
  siteEmbeds?: string
  /** @modelberry
   * - {@name Direct naar content}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Tekst voor schermlezers om direct door te gaan naar de content.}
   */
  skipToContentHeading?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/embed.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type embed}
 * - {@displayField title}
 * - {@description Embed}
 */
export interface ContentfulEmbed {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Code}
   * - {@type Text}
   * - {@widgetId multipleLine}
   */
  code?: string
  /** @modelberry
   * - {@name Type}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@validations in-html-js-action-js-app}
   */
  type?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/action.ts",
      "/** @modelberry
 * - {@plugin \\"@modelberry/plugin-contentful/plain\\"}
 * - {@type action}
 * - {@displayField title}
 * - {@description Action}
 */
export interface ContentfulAction {
  /** @modelberry
   * - {@name Titel binnen Contentful}
   * - {@required true}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Alleen gebruikt in Contentful, wordt nooit getoond op de site zelf}
   */
  title: string
  /** @modelberry
   * - {@name Actie naam}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Naam van de actie, zonder punt aan eind}
   */
  heading?: string
  /** @modelberry
   * - {@name Actie omschrijving}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Omschrijving van de actie, voor zoekmachines}
   */
  description?: string
  /** @modelberry
   * - {@name Icon}
   * - {@type Symbol}
   * - {@widgetId dropdown}
   * - {@validations in-activity-airplay-alert-circle-21}
   */
  icon?: string
  /** @modelberry
   * - {@name Actie paginalink}
   * - {@type Link}
   * - {@linkType Entry}
   * - {@widgetId entryLinkEditor}
   * - {@helpText De pagina waar de actie naar linkt (of gebruik de URL)}
   * - {@validations linkContentType-page}
   */
  page?: string
  /** @modelberry
   * - {@name Actie URL}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText De URL waar de actie naar linkt (of gebruik de paginalink)}
   * - {@validations regexp-2}
   */
  url?: string
  /** @modelberry
   * - {@name Anchor}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Voorbeeld: mijn-anchor}
   */
  anchor?: string
  /** @modelberry
   * - {@name Query}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   * - {@helpText Voorbeeld: &x=1&y=2}
   */
  query?: string
  /** @modelberry
   * - {@name Event id}
   * - {@type Symbol}
   * - {@widgetId slugEditor}
   * - {@helpText Voorbeeld: mijn-event-id}
   * - {@validations unique-true}
   */
  eventId?: string
  /** @modelberry
   * - {@disabled true}
   * - {@name 1.0.0}
   * - {@type Symbol}
   * - {@widgetId singleLine}
   */
  modelVersion?: string
}
",
    ],
    Array [
      "./dummy/validations.ts",
      "export const modelberryPluginData: ModelberryPluginData = {
  'size-min0-max155': { size: { max: 155, min: 0 } },
  'size-min1000-max200': { size: { max: 200, min: 1000 } },
  'linkContentType-testAction': { linkContentType: ['testAction'] },
  'linkContentType-someOtherAction': { linkContentType: ['someOtherAction'] },
  'linkContentType-action': { linkContentType: ['action'] },
  'linkContentType-navigationSegment': {
    linkContentType: ['navigationSegment'],
  },
  'in-block-card-divider': {
    in: [
      'block',
      'card',
      'divider',
      'featured',
      'gallery',
      'headline',
      'hero',
      'image',
      'quote',
      'showcase',
      'video',
    ],
  },
  'linkContentType-topic': { linkContentType: ['topic'] },
  'unique-true': { unique: true },
  'in-glacierLight-glacierDark': { in: ['glacierLight', 'glacierDark'] },
  'size-min1-max4': { size: { min: 1, max: 4 } },
  'in-activity-airplay-alert-circle': {
    in: [
      'activity',
      'airplay',
      'alert-circle',
      'alert-octagon',
      'alert-triangle',
      'align-center',
      'align-justify',
      'align-left',
      'align-right',
      'anchor',
      'aperture',
      'archive',
      'arrow-down-circle',
      'arrow-down-left',
      'arrow-down-right',
      'arrow-down',
      'arrow-left-circle',
      'arrow-left',
      'arrow-right-circle',
      'arrow-right',
      'arrow-up-circle',
      'arrow-up-left',
      'arrow-up-right',
      'arrow-up',
      'at-sign',
      'award',
      'bar-chart-2',
      'bar-chart',
      'battery-charging',
      'battery',
      'bell-off',
      'bell',
      'bluetooth',
      'bold',
      'book-open',
      'book',
      'bookmark',
      'box',
      'briefcase',
      'calendar',
      'camera-off',
      'camera',
      'cast',
      'check-circle',
      'check-square',
      'check',
      'chevron-down',
      'chevron-left',
      'chevron-right',
      'chevron-up',
      'chevrons-down',
      'chevrons-left',
      'chevrons-right',
      'chevrons-up',
      'chrome',
      'circle',
      'clipboard',
      'clock',
      'cloud-drizzle',
      'cloud-lightning',
      'cloud-off',
      'cloud-rain',
      'cloud-snow',
      'cloud',
      'code',
      'codepen',
      'codesandbox',
      'coffee',
      'columns',
      'command',
      'compass',
      'copy',
      'corner-down-left',
      'corner-down-right',
      'corner-left-down',
      'corner-left-up',
      'corner-right-down',
      'corner-right-up',
      'corner-up-left',
      'corner-up-right',
      'cpu',
      'credit-card',
      'crop',
      'crosshair',
      'database',
      'delete',
      'disc',
      'dollar-sign',
      'download-cloud',
      'download',
      'droplet',
      'edit-2',
      'edit-3',
      'edit',
      'external-link',
      'eye-off',
      'eye',
      'facebook',
      'fast-forward',
      'feather',
      'figma',
      'file-minus',
      'file-plus',
      'file-text',
      'file',
      'film',
      'filter',
      'flag',
      'folder-minus',
      'folder-plus',
      'folder',
      'framer',
      'frown',
      'gift',
      'git-branch',
      'git-commit',
      'git-merge',
      'git-pull-request',
      'github',
      'gitlab',
      'globe',
      'grid',
      'hard-drive',
      'hash',
      'headphones',
      'heart',
      'help-circle',
      'hexagon',
      'home',
      'image',
      'inbox',
      'info',
      'instagram',
      'italic',
      'key',
      'layers',
      'layout',
      'life-buoy',
      'link-2',
      'link',
      'linkedin',
      'list',
      'loader',
      'lock',
      'log-in',
      'log-out',
      'mail',
      'map-pin',
      'map',
      'maximize-2',
      'maximize',
      'meh',
      'menu',
      'message-circle',
      'message-square',
      'mic-off',
      'mic',
      'minimize-2',
      'minimize',
      'minus-circle',
      'minus-square',
      'minus',
      'monitor',
      'moon',
      'more-horizontal',
      'more-vertical',
      'mouse-pointer',
      'move',
      'music',
      'navigation-2',
      'navigation',
      'octagon',
      'package',
      'paperclip',
      'pause-circle',
      'pause',
      'pen-tool',
      'percent',
      'phone-call',
      'phone-forwarded',
      'phone-incoming',
      'phone-missed',
      'phone-off',
      'phone-outgoing',
      'phone',
      'pie-chart',
      'play-circle',
      'play',
      'plus-circle',
      'plus-square',
      'plus',
      'pocket',
      'power',
      'printer',
      'radio',
      'refresh-ccw',
      'refresh-cw',
      'repeat',
      'rewind',
      'rotate-ccw',
      'rotate-cw',
      'rss',
      'save',
      'scissors',
      'search',
      'send',
      'server',
      'settings',
      'share-2',
      'share',
      'shield-off',
      'shield',
      'shopping-bag',
      'shopping-cart',
      'shuffle',
      'sidebar',
      'skip-back',
      'skip-forward',
      'slack',
      'slash',
      'sliders',
      'smartphone',
      'smile',
      'speaker',
      'square',
      'star',
      'stop-circle',
      'sun',
      'sunrise',
      'sunset',
      'tablet',
      'tag',
      'target',
      'terminal',
      'thermometer',
      'thumbs-down',
      'thumbs-up',
      'toggle-left',
      'toggle-right',
      'tool',
      'trash-2',
      'trash',
      'trello',
      'trending-down',
      'trending-up',
      'triangle',
      'truck',
      'tv',
      'twitch',
      'twitter',
      'type',
      'umbrella',
      'underline',
      'unlock',
      'upload-cloud',
      'upload',
      'user-check',
      'user-minus',
      'user-plus',
      'user-x',
      'user',
      'users',
      'video-off',
      'video',
      'voicemail',
      'volume-1',
      'volume-2',
      'volume-x',
      'volume',
      'watch',
      'wifi-off',
      'wifi',
      'wind',
      'x-circle',
      'x-octagon',
      'x-square',
      'x',
      'youtube',
      'zap-off',
      'zap',
      'zoom-in',
      'zoom-out',
    ],
  },
  'linkMimetypeGroup-image': { linkMimetypeGroup: ['image'] },
  'linkContentType-embed': { linkContentType: ['embed'] },
  'in-text': { in: ['text'] },
  'enabledMarks-bold-italic-underline': {
    enabledMarks: ['bold', 'italic', 'underline', 'code'],
    message: 'Only bold, italic, underline, and code marks are allowed',
  },
  unknown: {
    nodes: {
      'embedded-entry-block': [{ linkContentType: ['embed', 'topicSection'] }],
      'embedded-entry-inline': [
        { linkContentType: ['embed', 'topicSection'], message: null },
      ],
    },
  },
  'regexp-1': {
    message: 'Please use a valid path: /this/is/a/valid/path/with/:slug',
    regexp: { pattern: '^\\\\\\\\/[a-z0-9:\\\\\\\\._/~%\\\\\\\\-\\\\\\\\+&\\\\\\\\#\\\\\\\\?!=\\\\\\\\(\\\\\\\\)@]*$' },
  },
  'linkContentType-navigationSection-tableSection-textSection': {
    linkContentType: [
      'navigationSection',
      'tableSection',
      'textSection',
      'topicSection',
    ],
  },
  'in-html-js-action-js-app': {
    in: [
      'html',
      'js-action',
      'js-app',
      'js-page-section',
      'js-page',
      'youtube',
    ],
  },
  'in-activity-airplay-alert-circle-21': {
    in: [
      'activity',
      'airplay',
      'alert-circle',
      'alert-octagon',
      'alert-triangle',
      'align-center',
      'align-justify',
      'align-left',
      'align-right',
      'anchor',
      'aperture',
      'archive',
      'arrow-down-circle',
      'arrow-down-left',
      'arrow-down-right',
      'arrow-down',
      'arrow-left-circle',
      'arrow-left',
      'arrow-right-circle',
      'arrow-right',
      'arrow-up-circle',
      'arrow-up-left',
      'arrow-up-right',
      'arrow-up',
      'at-sign',
      'award',
      'bar-chart-2',
      'bar-chart',
      'battery-charging',
      'battery',
      'bell-off',
      'bell',
      'bluetooth',
      'bold',
      'book-open',
      'book',
      'bookmark',
      'box',
      'briefcase',
      'calendar',
      'camera-off',
      'camera',
      'cast',
      'check-circle',
      'check-square',
      'check',
      'chevron-down',
      'chevron-left',
      'chevron-right',
      'chevron-up',
      'chevrons-down',
      'chevrons-left',
      'chevrons-right',
      'chevrons-up',
      'chrome',
      'circle',
      'clipboard',
      'clock',
      'cloud-drizzle',
      'cloud-lightning',
      'cloud-off',
      'cloud-rain',
      'cloud-snow',
      'cloud',
      'code',
      'codepen',
      'codesandbox',
      'coffee',
      'columns',
      'command',
      'compass',
      'copy',
      'corner-down-left',
      'corner-down-right',
      'corner-left-down',
      'corner-left-up',
      'corner-right-down',
      'corner-right-up',
      'corner-up-left',
      'corner-up-right',
      'cpu',
      'credit-card',
      'crop',
      'crosshair',
      'database',
      'delete',
      'disc',
      'dollar-sign',
      'download-cloud',
      'download',
      'droplet',
      'edit-2',
      'edit-3',
      'edit',
      'external-link',
      'eye-off',
      'eye',
      'facebook',
      'fast-forward',
      'feather',
      'figma',
      'file-minus',
      'file-plus',
      'file-text',
      'file',
      'film',
      'filter',
      'flag',
      'folder-minus',
      'folder-plus',
      'folder',
      'framer',
      'frown',
      'gift',
      'git-branch',
      'git-commit',
      'git-merge',
      'git-pull-request',
      'gitlab',
      'globe',
      'grid',
      'hard-drive',
      'hash',
      'headphones',
      'heart',
      'help-circle',
      'hexagon',
      'home',
      'image',
      'inbox',
      'info',
      'instagram',
      'italic',
      'key',
      'layers',
      'layout',
      'life-buoy',
      'link-2',
      'link',
      'linkedin',
      'list',
      'loader',
      'lock',
      'log-in',
      'log-out',
      'mail',
      'map-pin',
      'map',
      'maximize-2',
      'maximize',
      'meh',
      'menu',
      'message-circle',
      'message-square',
      'mic-off',
      'mic',
      'minimize-2',
      'minimize',
      'minus-circle',
      'minus-square',
      'minus',
      'monitor',
      'moon',
      'more-horizontal',
      'more-vertical',
      'mouse-pointer',
      'move',
      'music',
      'navigation-2',
      'navigation',
      'octagon',
      'package',
      'paperclip',
      'pause-circle',
      'pause',
      'pen-tool',
      'percent',
      'phone-call',
      'phone-forwarded',
      'phone-incoming',
      'phone-missed',
      'phone-off',
      'phone-outgoing',
      'phone',
      'pie-chart',
      'play-circle',
      'play',
      'plus-circle',
      'plus-square',
      'plus',
      'pocket',
      'power',
      'printer',
      'radio',
      'refresh-ccw',
      'refresh-cw',
      'repeat',
      'rewind',
      'rotate-ccw',
      'rotate-cw',
      'rss',
      'save',
      'scissors',
      'search',
      'send',
      'server',
      'settings',
      'share-2',
      'share',
      'shield-off',
      'shield',
      'shopping-bag',
      'shopping-cart',
      'shuffle',
      'sidebar',
      'skip-back',
      'skip-forward',
      'slack',
      'slash',
      'sliders',
      'smartphone',
      'smile',
      'speaker',
      'square',
      'star',
      'stop-circle',
      'sun',
      'sunrise',
      'sunset',
      'tablet',
      'tag',
      'target',
      'terminal',
      'thermometer',
      'thumbs-down',
      'thumbs-up',
      'toggle-left',
      'toggle-right',
      'tool',
      'trash-2',
      'trash',
      'trello',
      'trending-down',
      'trending-up',
      'triangle',
      'truck',
      'tv',
      'twitch',
      'twitter',
      'type',
      'umbrella',
      'underline',
      'unlock',
      'upload-cloud',
      'upload',
      'user-check',
      'user-minus',
      'user-plus',
      'user-x',
      'user',
      'users',
      'video-off',
      'video',
      'voicemail',
      'volume-1',
      'volume-2',
      'volume-x',
      'volume',
      'watch',
      'wifi-off',
      'wifi',
      'wind',
      'x-circle',
      'x-octagon',
      'x-square',
      'x',
      'youtube',
      'zap-off',
      'zap',
      'zoom-in',
      'zoom-out',
      'Github',
    ],
  },
  'linkContentType-page': { linkContentType: ['page'] },
  'regexp-2': {
    message: 'Please use a valid url: https://this/is/a/valid/url',
    regexp: {
      pattern:
        '^(ftp|http|https):\\\\\\\\/\\\\\\\\/(\\\\\\\\w+:{0,1}\\\\\\\\w*@)?(\\\\\\\\S+)(:[0-9]+)?(\\\\\\\\/|\\\\\\\\/([\\\\\\\\w#!:.?+=&%@!\\\\\\\\-/]))?$',
    },
  },
}
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
